--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github" style="width: 2rem;height: 2rem;">
                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-                        </svg><a class="nav-link active" href="#" style="font-family: Poppins, sans-serif;"><strong>GitHub</strong></a></li>
+                        </svg><a class="nav-link active" href="https://github.com/siddharth1012/Text-to-Image-VAST" style="font-family: Poppins, sans-serif;"><strong>GitHub</strong></a></li>
                 </ul>
             </div>
         </div>
@@ -32,7 +32,7 @@
                     <h2 class="fw-bold text-center mb-2" style="font-family: Poppins, sans-serif;">Text To Image Generation</h2>
                     <p class="text-center mb-0" style="font-family: Poppins, sans-serif;margin-top: 2rem;">Write Your Text Here</p>
                 </div>
-                <form action="/" class="d-flex justify-content-center flex-wrap flex-lg-nowrap" method="post">
+                <form action="/recom" class="d-flex justify-content-center flex-wrap flex-lg-nowrap" method="post">
                     <div class="my-2"><input name="user_input" class="form-control" type="text" style="width: 30rem;border-radius: 67px;border-width: 2px;border-color: rgb(71,70,70);box-shadow: 0px 3px 1px rgb(180,180,180);"></div>
                     <div class="my-2"><button class="btn btn-primary shadow ms-2" type="submit" style="font-family: Poppins, sans-serif;">Surprise Me</button></div>
                 </form>
@@ -41,6 +41,9 @@
     </section>
     <section>
         <div class="container">
+            {% if input_search %}
+            <div class="row"><span><strong>You Searched For: </strong>"{{input_search}}"</span></div>
+            {% endif %}
             <div class="row">
                 {% if list1 %}
                 {% for i in list1 %}
