--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-images" style="width: 2rem;height: 2rem;">
                         <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"></path>
                         <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"></path>
-                    </svg></span><span style="font-family: Poppins, sans-serif;font-size: 2rem;"><strong>VAST</strong></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    </svg></span><span style="font-family: Poppins, sans-serif;font-size: 2rem;"><strong>Image Search</strong></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github" style="width: 2rem;height: 2rem;">
@@ -29,7 +29,7 @@
         <div class="container text-center">
             <div class="border rounded border-white d-inline-block flex-column justify-content-between align-items-center flex-lg-row bg-primary-gradient p-4 p-lg-5" style="display: flex;">
                 <div class="text-center text-lg-start d-block py-3 py-lg-1">
-                    <h2 class="fw-bold text-center mb-2" style="font-family: Poppins, sans-serif;">Text To Image Generation</h2>
+                    <h2 class="fw-bold text-center mb-2" style="font-family: Poppins, sans-serif;">Image Search Engine</h2>
                     <p class="text-center mb-0" style="font-family: Poppins, sans-serif;margin-top: 2rem;">Write Your Text Here</p>
                 </div>
                 <form action="/recom" class="d-flex justify-content-center flex-wrap flex-lg-nowrap" method="post">
@@ -57,8 +57,8 @@
     </section>
     <footer class="text-center" style="background: transparent;">
         <div class="container text-muted py-4 py-lg-5">
-            <p class="mb-0" style="padding: .5rem 0rem;font-family: Poppins, sans-serif;"><span style="color: rgb(0, 0, 0);">A Project By Team VAST</span></p>
-            <p class="mb-0" style="padding: .5rem 0rem;font-family: Poppins, sans-serif;"><span style="color: rgb(0, 0, 0);">Copyright © 2022 VAST</span></p>
+            <p class="mb-0" style="padding: .5rem 0rem;font-family: Poppins, sans-serif;"><span style="color: rgb(0, 0, 0);">A Project By Siddharth Saraswat</span></p>
+            <p class="mb-0" style="padding: .5rem 0rem;font-family: Poppins, sans-serif;"><span style="color: rgb(0, 0, 0);">Copyright © 2023</span></p>
         </div>
     </footer>
     <script src="../static/assets/bootstrap/js/bootstrap.min.js"></script>
