--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <section class="py-5" style="padding-top: 2rem;padding-bottom: 2rem;">
+    <section class="container" style="padding-top: 2rem;padding-bottom: 2rem;">
         <div class="container text-center">
             <div class="border rounded border-white d-inline-block flex-column justify-content-between align-items-center flex-lg-row bg-primary-gradient p-4 p-lg-5" style="display: flex;">
                 <div class="text-center text-lg-start d-block py-3 py-lg-1">
@@ -39,7 +39,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="container">
         <div class="container">
             {% if input_search %}
             <div class="row"><span><strong>You Searched For: </strong>"{{input_search}}"</span></div>
