--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </nav>
     <section class="container" style="padding-top: 2rem;padding-bottom: 2rem;">
         <div class="container text-center">
-            <div class="border rounded border-white d-inline-block flex-column justify-content-between align-items-center flex-lg-row bg-primary-gradient p-4 p-lg-5" style="display: flex;">
+            <div class="container" style="display: flex;">
                 <div class="text-center text-lg-start d-block py-3 py-lg-1">
                     <h2 class="fw-bold text-center mb-2" style="font-family: Poppins, sans-serif;">Image Search Engine</h2>
                     <p class="text-center mb-0" style="font-family: Poppins, sans-serif;margin-top: 2rem;">Write Your Text Here</p>
