--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                     <h2 class="fw-bold text-center mb-2" style="font-family: Poppins, sans-serif;">Image Search Engine</h2>
                     <p class="text-center mb-0" style="font-family: Poppins, sans-serif;margin-top: 2rem;">Write Your Text Here</p>
                 </div>
-                <form action="/recom" class="container" method="post">
+                <form action="/recom" class="d-flex justify-content-center flex-wrap flex-lg-nowrap" method="post">
                     <div class="my-2"><input name="user_input" class="form-control" type="text" style="width: 30rem;border-radius: 67px;border-width: 2px;border-color: rgb(71,70,70);box-shadow: 0px 3px 1px rgb(180,180,180);"></div>
                     <div class="my-2"><button class="btn btn-primary shadow ms-2" type="submit" style="font-family: Poppins, sans-serif;">Surprise Me</button></div>
                 </form>
